// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chains: index filter chain 1`] = `
"<div className=\\"container-fluid pt-dark\\">
  <withRouter(Connect(Tour)) name=\\"chains\\" steps={{...}} finalStepSelector=\\"#chains\\" nextPage=\\"transactions\\" />
  <div className=\\"row\\">
    <div className=\\"col-sm-4 text-left\\">
      <h3>
        Shards
      </h3>
    </div>
    <div className=\\"col-sm-8 text-right\\">
      <div className=\\"pt-button-group\\">
        <withRouter(Connect(ReduxForm)) limit={25} offset={0} />
      </div>
    </div>
  </div>
  <div className=\\"row\\" style={{...}}>
    <div className=\\"col-sm-4\\">
      <div className=\\"pt-input-group pt-dark pt-large\\">
        <span className=\\"pt-icon pt-icon-search\\" />
        <input className=\\"pt-input\\" type=\\"search\\" placeholder=\\"Search Shards (Label)\\" onChange={[Function: onChange]} dir=\\"auto\\" />
      </div>
    </div>
    <div className=\\"col-sm-2\\" />
    <div className=\\"col-sm-2\\">
      <Blueprint.Switch checked={false} onChange={[Function: onChange]} label=\\"Search by Shard ID\\" />
    </div>
  </div>
  <div className=\\"container-fluid pt-dark\\">
    <div className=\\"row\\">
      <div className=\\"col-sm-4 main-div\\">
        <div className=\\"accounts-margin-top\\">
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 9\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 1\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 2\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 3\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 4\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 5\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 6\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 7\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 10\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 11\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 12\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 13\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 14\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 89\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 200\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 822\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 52\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 900\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 1000\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 9000\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"airline cartel 2000\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div className=\\"col-sm-8 account-details\\">
        <div />
      </div>
    </div>
    <div className=\\"row\\">
      <div className=\\"col-sm-1 smd-pad-16 text-left\\">
        <Blueprint.Button onClick={[Function]} className=\\"pt-icon-arrow-left\\" text=\\"Previous\\" disabled={true} />
      </div>
      <div className=\\"col-sm-2 text-center\\" style={{...}}>
        Rows 1-21
      </div>
      <div className=\\"col-sm-1 smd-pad-16 text-right\\">
        <Blueprint.Button onClick={[Function]} className=\\"pt-icon-arrow-right\\" text=\\"Next\\" disabled={true} />
      </div>
    </div>
  </div>
</div>"
`;

exports[`Chains: index mapStateToProps with default state 1`] = `
Object {
  "chains": Object {
    "airline cartel 1": Object {
      "79f69ec8f4bdb4a0c43e8970e4f2a9701db43b8b7b046023fe2a874ddb32acae": Object {},
    },
    "airline cartel 10": Object {
      "b3e7a42333819dcb5bf800b7cc74f59eb9861d4ccf8d8138eb8f3d4d9308e5a7": Object {},
    },
    "airline cartel 1000": Object {
      "63e0a0b02a9216d980dde66215d2c2e3b598f58c421d0046c100b4e0a571f40c": Object {},
    },
    "airline cartel 11": Object {
      "1f0744737a6b9e2a0688cc7bb58d3696fe777fe53659613ba164c82a9f210fb4": Object {},
    },
    "airline cartel 12": Object {
      "2206661f918ca9f1fad4578b212f3e5abff7ad714e024297a1ba70fdcf52be67": Object {},
    },
    "airline cartel 13": Object {
      "b5f6dc91e333b20140b007c55f28027be28bb8b54e744fbed609668293376efc": Object {},
      "f8d3a497da2c7325eab38ed8a48c99e463c4417bf75e1694327f9633fffcaa10": Object {},
      "fb92498236dfeb519ff6d36a7bc37afd4eab34e05f5d40eabc3539621c09217b": Object {},
    },
    "airline cartel 14": Object {
      "2f19b069f2700ffd7217025efb1bcf47603a6a137a07b0c28bbedc47f0485acf": Object {},
    },
    "airline cartel 2": Object {
      "e5ea4617812076bac15e12e4f70f78076f9f371ac744022905be97e57ca05bf2": Object {},
    },
    "airline cartel 200": Object {
      "2b1ead18005e051e3fb68ce0f00075f4fa289144b1d490c0a04c7c1a90437021": Object {},
    },
    "airline cartel 2000": Object {
      "5b89dd643d729fe9d433f5243acefc596036aacd428499e6994832e5370d4ef9": Object {},
    },
    "airline cartel 3": Object {
      "bd3d6838e2bdcb5b1cf1093873d90e3192aa8bcffe05d1b2d6522f09b4dafef8": Object {},
    },
    "airline cartel 4": Object {
      "bbee98fb39586c13884998ccdeed659abf9b44c2c3eede252f57c83d4245e66c": Object {},
    },
    "airline cartel 5": Object {
      "092cec7cd999b8b4827e0e384d2d8636e8484b6e2d8f824d4727663cd1ba330d": Object {},
    },
    "airline cartel 52": Object {
      "4a8512095130296c0388d3c8277228890ee5b10ee83383ce0be1dd24e3537b7d": Object {},
    },
    "airline cartel 6": Object {
      "6a5abc53876eaae27279b194335526b52c3980e19dff5ab0de384deed1a90950": Object {},
    },
    "airline cartel 7": Object {
      "0d705c5d05ae4cc780655d92939cdb31594ffa8b29c5a26a6ae0bb6b2a66b2c4": Object {},
    },
    "airline cartel 822": Object {
      "6913f2c6faa6e47746c0dae953536116941bdf8473ae2452a2ab6ae01588b2a6": Object {},
    },
    "airline cartel 89": Object {
      "54d04b91157066f2bed14954c7c635b2cd82dc754db4195c61e90e208d9bd5d5": Object {},
    },
    "airline cartel 9": Object {
      "75dc24995abf63fe7d637b4879353a41593ef05c37ee6d11704bb97403306a86": Object {},
      "86d43e5b7a57711ecf734b79fb998c119d525afa2832ee726d6791cdac1864c6": Object {},
      "8768cb0769067d78b147974d627884b4de0737d60ea2f4e978663a62946830a5": Object {},
      "8eeefc708630002bb349ce1e1f914ac3adf8efc385106a1ef04b90c3d9b7ee60": Object {},
      "90d35b73a7ca7dd4fe4ccfd425bf404f92eb3091e502643bc62b936e331ad08b": Object {},
      "936986d54af89e2fa3c4888563856940d8f80cd5c1d01c386bd98207d29ae1e9": Object {},
      "ab1696d5f6a36836f0bd23d96918cce4f78b3667518d70e721914f391142a5e1": Object {},
    },
    "airline cartel 900": Object {
      "c861f9caed98de482888784ba0384e7a23a086d1387702ac3981b81d8df30632": Object {},
    },
    "airline cartel 9000": Object {
      "8d30f74bfe22245ba513ee0d09bbcc0d26f82513fb35bdc9b5862d5c5c88dcf6": Object {},
    },
  },
  "filter": "airline",
  "initialLabel": null,
  "isLoading": undefined,
  "labelIds": Object {
    "airline cartel 1": Object {
      "79f69ec8f4bdb4a0c43e8970e4f2a9701db43b8b7b046023fe2a874ddb32acae": Object {},
    },
    "airline cartel 10": Object {
      "b3e7a42333819dcb5bf800b7cc74f59eb9861d4ccf8d8138eb8f3d4d9308e5a7": Object {},
    },
    "airline cartel 1000": Object {
      "63e0a0b02a9216d980dde66215d2c2e3b598f58c421d0046c100b4e0a571f40c": Object {},
    },
    "airline cartel 11": Object {
      "1f0744737a6b9e2a0688cc7bb58d3696fe777fe53659613ba164c82a9f210fb4": Object {},
    },
    "airline cartel 12": Object {
      "2206661f918ca9f1fad4578b212f3e5abff7ad714e024297a1ba70fdcf52be67": Object {},
    },
    "airline cartel 13": Object {
      "b5f6dc91e333b20140b007c55f28027be28bb8b54e744fbed609668293376efc": Object {},
      "f8d3a497da2c7325eab38ed8a48c99e463c4417bf75e1694327f9633fffcaa10": Object {},
      "fb92498236dfeb519ff6d36a7bc37afd4eab34e05f5d40eabc3539621c09217b": Object {},
    },
    "airline cartel 14": Object {
      "2f19b069f2700ffd7217025efb1bcf47603a6a137a07b0c28bbedc47f0485acf": Object {},
    },
    "airline cartel 2": Object {
      "e5ea4617812076bac15e12e4f70f78076f9f371ac744022905be97e57ca05bf2": Object {},
    },
    "airline cartel 200": Object {
      "2b1ead18005e051e3fb68ce0f00075f4fa289144b1d490c0a04c7c1a90437021": Object {},
    },
    "airline cartel 2000": Object {
      "5b89dd643d729fe9d433f5243acefc596036aacd428499e6994832e5370d4ef9": Object {},
    },
    "airline cartel 3": Object {
      "bd3d6838e2bdcb5b1cf1093873d90e3192aa8bcffe05d1b2d6522f09b4dafef8": Object {},
    },
    "airline cartel 4": Object {
      "bbee98fb39586c13884998ccdeed659abf9b44c2c3eede252f57c83d4245e66c": Object {},
    },
    "airline cartel 5": Object {
      "092cec7cd999b8b4827e0e384d2d8636e8484b6e2d8f824d4727663cd1ba330d": Object {},
    },
    "airline cartel 52": Object {
      "4a8512095130296c0388d3c8277228890ee5b10ee83383ce0be1dd24e3537b7d": Object {},
    },
    "airline cartel 6": Object {
      "6a5abc53876eaae27279b194335526b52c3980e19dff5ab0de384deed1a90950": Object {},
    },
    "airline cartel 7": Object {
      "0d705c5d05ae4cc780655d92939cdb31594ffa8b29c5a26a6ae0bb6b2a66b2c4": Object {},
    },
    "airline cartel 822": Object {
      "6913f2c6faa6e47746c0dae953536116941bdf8473ae2452a2ab6ae01588b2a6": Object {},
    },
    "airline cartel 89": Object {
      "54d04b91157066f2bed14954c7c635b2cd82dc754db4195c61e90e208d9bd5d5": Object {},
    },
    "airline cartel 9": Object {
      "75dc24995abf63fe7d637b4879353a41593ef05c37ee6d11704bb97403306a86": Object {},
      "86d43e5b7a57711ecf734b79fb998c119d525afa2832ee726d6791cdac1864c6": Object {},
      "8768cb0769067d78b147974d627884b4de0737d60ea2f4e978663a62946830a5": Object {},
      "8eeefc708630002bb349ce1e1f914ac3adf8efc385106a1ef04b90c3d9b7ee60": Object {},
      "90d35b73a7ca7dd4fe4ccfd425bf404f92eb3091e502643bc62b936e331ad08b": Object {},
      "936986d54af89e2fa3c4888563856940d8f80cd5c1d01c386bd98207d29ae1e9": Object {},
      "ab1696d5f6a36836f0bd23d96918cce4f78b3667518d70e721914f391142a5e1": Object {},
    },
    "airline cartel 900": Object {
      "c861f9caed98de482888784ba0384e7a23a086d1387702ac3981b81d8df30632": Object {},
    },
    "airline cartel 9000": Object {
      "8d30f74bfe22245ba513ee0d09bbcc0d26f82513fb35bdc9b5862d5c5c88dcf6": Object {},
    },
  },
}
`;

exports[`Chains: index render component with empty values 1`] = `
"<div className=\\"container-fluid pt-dark\\">
  <withRouter(Connect(Tour)) name=\\"chains\\" steps={{...}} finalStepSelector=\\"#chains\\" nextPage=\\"transactions\\" />
  <div className=\\"row\\">
    <div className=\\"col-sm-4 text-left\\">
      <h3>
        Shards
      </h3>
    </div>
    <div className=\\"col-sm-8 text-right\\">
      <div className=\\"pt-button-group\\">
        <withRouter(Connect(ReduxForm)) limit={25} offset={0} />
      </div>
    </div>
  </div>
  <div className=\\"row\\" style={{...}}>
    <div className=\\"col-sm-4\\">
      <div className=\\"pt-input-group pt-dark pt-large\\">
        <span className=\\"pt-icon pt-icon-search\\" />
        <input className=\\"pt-input\\" type=\\"search\\" placeholder=\\"Search Shards (Label)\\" onChange={[Function: onChange]} dir=\\"auto\\" />
      </div>
    </div>
    <div className=\\"col-sm-2\\" />
    <div className=\\"col-sm-2\\">
      <Blueprint.Switch checked={false} onChange={[Function: onChange]} label=\\"Search by Shard ID\\" />
    </div>
  </div>
  <div className=\\"container-fluid pt-dark\\">
    <div className=\\"row\\">
      <div className=\\"col-sm-4 main-div\\">
        <div className=\\"accounts-margin-top\\">
          <div className=\\"smd-margin-8\\">
            <div className=\\"row\\">
              <div className=\\"pt-card pt-elevation-2 smd-pointer \\" onClick={[Function: onClick]}>
                <HexText value=\\"length\\" classes=\\"large smd-pad-4 chain-width\\" />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div className=\\"col-sm-8 account-details\\">
        <div />
      </div>
    </div>
    <div className=\\"row\\">
      <div className=\\"col-sm-1 smd-pad-16 text-left\\">
        <Blueprint.Button onClick={[Function]} className=\\"pt-icon-arrow-left\\" text=\\"Previous\\" disabled={true} />
      </div>
      <div className=\\"col-sm-2 text-center\\" style={{...}}>
        Rows 1-1
      </div>
      <div className=\\"col-sm-1 smd-pad-16 text-right\\">
        <Blueprint.Button onClick={[Function]} className=\\"pt-icon-arrow-right\\" text=\\"Next\\" disabled={true} />
      </div>
    </div>
  </div>
</div>"
`;

exports[`Chains: index render component with values 1`] = `
"<div className=\\"container-fluid pt-dark\\">
  <withRouter(Connect(Tour)) name=\\"chains\\" steps={{...}} finalStepSelector=\\"#chains\\" nextPage=\\"transactions\\" />
  <div className=\\"row\\">
    <div className=\\"col-sm-4 text-left\\">
      <h3>
        Shards
      </h3>
    </div>
    <div className=\\"col-sm-8 text-right\\">
      <div className=\\"pt-button-group\\">
        <withRouter(Connect(ReduxForm)) limit={25} offset={0} />
      </div>
    </div>
  </div>
  <div className=\\"row\\" style={{...}}>
    <div className=\\"col-sm-4\\">
      <div className=\\"pt-input-group pt-dark pt-large\\">
        <span className=\\"pt-icon pt-icon-search\\" />
        <input className=\\"pt-input\\" type=\\"search\\" placeholder=\\"Search Shards (Label)\\" onChange={[Function: onChange]} dir=\\"auto\\" />
      </div>
    </div>
    <div className=\\"col-sm-2\\" />
    <div className=\\"col-sm-2\\">
      <Blueprint.Switch checked={false} onChange={[Function: onChange]} label=\\"Search by Shard ID\\" />
    </div>
  </div>
  <div className=\\"container-fluid pt-dark\\">
    <div className=\\"row\\">
      <div className=\\"col-sm-4 main-div\\">
        <div className=\\"accounts-margin-top\\">
          <table>
            <tbody>
              <tr>
                <td colSpan={3}>
                  Fetching....
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div className=\\"col-sm-8 account-details\\">
        <div />
      </div>
    </div>
    <div className=\\"row\\">
      <div className=\\"col-sm-1 smd-pad-16 text-left\\">
        <Blueprint.Button onClick={[Function]} className=\\"pt-icon-arrow-left\\" text=\\"Previous\\" disabled={true} />
      </div>
      <div className=\\"col-sm-2 text-center\\" style={{...}}>
        Rows 1-21
      </div>
      <div className=\\"col-sm-1 smd-pad-16 text-right\\">
        <Blueprint.Button onClick={[Function]} className=\\"pt-icon-arrow-right\\" text=\\"Next\\" disabled={true} />
      </div>
    </div>
  </div>
</div>"
`;
